<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    tools:context="com.kotlinfirebase.SignUpActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:src="@drawable/kotlin_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/signup_heading_name"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/person_icon"
        android:ellipsize="end"
        android:hint="@string/signup_hint_full_name"
        android:inputType="textPersonName"
        android:lines="1"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/email_icon"
        android:ellipsize="end"
        android:hint="@string/signup_hint_email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/lock_icon"
        android:ellipsize="end"
        android:hint="@string/signup_hint_password"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/lock_icon"
        android:ellipsize="end"
        android:hint="@string/signup_hint_confirm_password"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/signup_button_text"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
